scripts/airtable/templates/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: database-service-lb
spec:
  type: LoadBalancer
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: airtabledb
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 9999
      protocol: TCP
      name: http
  selector:
    name: auth

---
apiVersion: v1
kind: Service
metadata:
  name: audit-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 9996
      protocol: TCP
      name: http
  selector:
    name: audit

---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  ports:
    - port: 80
      targetPort: 9997
      protocol: TCP
      name: http
  selector:
    name: notification

---
apiVersion: v1
kind: Service
metadata:
  name: workspace-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 9998
      protocol: TCP
      name: http
  selector:
    name: workspace

---
apiVersion: v1
kind: Service
metadata:
  name: meta-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 9995
      protocol: TCP
      name: http
  selector:
    name: meta

---
apiVersion: v1
kind: Service
metadata:
  name: data-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 9994
      protocol: TCP
      name: http
  selector:
    name: data

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    name: frontend
