scripts/airtable/templates/ingress-be.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: load-balancer
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "2048m"
    nginx.ingress.kubernetes.io/proxy-body-size: "2048m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "360"
spec:
  rules:
    - http:
        paths:
          - path: /user(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /auth(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /audit(.*)
            pathType: Prefix
            backend:
              service:
                name: audit-service
                port:
                  number: 80
          - path: /logs(.*)
            pathType: Prefix
            backend:
              service:
                name: audit-service
                port:
                  number: 80
          - path: /workspace(.*)
            pathType: Prefix
            backend:
              service:
                name: workspace-service
                port:
                  number: 80
          - path: /meta(.*)
            pathType: Prefix
            backend:
              service:
                name: meta-service
                port:
                  number: 80
          - path: /data(.*)
            pathType: Prefix
            backend:
              service:
                name: data-service
                port:
                  number: 80
