scripts/airtable/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: load-balancer
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "2048m"
    nginx.ingress.kubernetes.io/proxy-body-size: "2048m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "360"
spec:
  rules:
    - http:
        paths:
          - path: /api/(users.*)
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /api/(auth.*)
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /api/(audit.*)
            pathType: Prefix
            backend:
              service:
                name: audit-service
                port:
                  number: 80
          - path: /api/(logs.*)
            pathType: Prefix
            backend:
              service:
                name: audit-service
                port:
                  number: 80
          - path: /api/(workspace.*)
            pathType: Prefix
            backend:
              service:
                name: workspace-service
                port:
                  number: 80
          - path: /api/(meta.*)
            pathType: Prefix
            backend:
              service:
                name: meta-service
                port:
                  number: 80
          - path: /api/(data.*)
            pathType: Prefix
            backend:
              service:
                name: data-service
                port:
                  number: 80
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
